--- a/app/src/main/res/layout/rec_result_row.xml
+++ b/app/src/main/res/layout/rec_result_row.xml
@@ -27,8 +27,8 @@
 
     <ImageView
         android:id="@+id/recEntryImage"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:scaleType="centerCrop"
@@ -57,6 +57,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="4dp"
         android:text="author"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="@id/recEntryTitle"
         app:layout_constraintTop_toBottomOf="@id/recEntryTitle"
         app:layout_constraintBottom_toTopOf="@id/recFeeling"
