fixed bug where navbar blocked bottom of list views

--- a/app/src/main/res/layout/activity_view_blog.xml
+++ b/app/src/main/res/layout/activity_view_blog.xml
@@ -24,9 +24,22 @@
         android:id="@+id/blogEntryList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.94"
+        app:layout_constraintHeight_percent="0.87"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/authorText"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
 
+        />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/blogEntryList"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
