--- a/app/src/main/res/layout/activity_comment_blog_entry.xml
+++ b/app/src/main/res/layout/activity_comment_blog_entry.xml
@@ -59,7 +59,17 @@
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintTop_toBottomOf="@id/comment_input"
-        app:layout_constraintVertical_bias="0.0" />
+        />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
