--- a/app/src/main/res/layout/activity_view_blog_entry.xml
+++ b/app/src/main/res/layout/activity_view_blog_entry.xml
@@ -54,6 +54,7 @@
         app:layout_constraintLeft_toLeftOf="@id/mealdetailimage"
         app:layout_constraintRight_toLeftOf="@id/likeBtn"
         app:layout_constraintTop_toTopOf="@id/flagBtn" />
+
     <TextView
         android:id="@+id/entryAuthor"
         android:layout_width="0dp"
@@ -67,6 +68,17 @@
 
 
         />
+
+    <TextView
+        android:id="@+id/likesText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Liked by"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/entryAuthor"
+        app:layout_constraintEnd_toEndOf="@+id/flagBtn"
+        app:layout_constraintTop_toBottomOf="@+id/detailMealtitle" />
 
     <TextView
         android:id="@+id/detailMealtime"
