--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -12,7 +12,7 @@
         android:text="@string/settings"
         android:textStyle="bold"
         android:textSize="40sp"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/black"
         android:padding="20dp"/>
 
     <LinearLayout
@@ -59,7 +59,8 @@
             android:textAllCaps="true"
             android:padding="10dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginStart="10dp"
+            android:backgroundTint="#0066ff"/>
 
 
     </LinearLayout>
