change dashboard styling

--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="150dp"/>
+            android:layout_marginStart="150dp" />
 
 
     </LinearLayout>
@@ -60,7 +60,7 @@
             android:padding="10dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
-            android:backgroundTint="#0066ff"/>
+            android:backgroundTint="@color/button"/>
 
 
     </LinearLayout>
