--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -36,7 +36,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addMealText"
-        android:backgroundTint="#0066ff"
+        android:backgroundTint="@color/button"
         android:layout_marginTop="140dp"/>
 
     <Button
@@ -48,7 +48,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mealWithPhotoBtn"
-        android:backgroundTint="#0066ff"
+        android:backgroundTint="@color/button"
         android:layout_marginTop="50dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
