--- a/app/src/main/res/layout/activity_manage_socials.xml
+++ b/app/src/main/res/layout/activity_manage_socials.xml
@@ -32,45 +32,45 @@
         <Button
             android:id="@+id/myBlogBtn"
             android:layout_width="300dp"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:text="My Blog"
-            android:backgroundTint="#0066ff"
+            android:backgroundTint="@color/button"
             android:layout_marginVertical="20dp"
             android:textSize="18sp"/>
 
         <Button
             android:id="@+id/manageFriendsBtn"
             android:layout_width="300dp"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:text="Manage Friends"
-            android:backgroundTint="#0066ff"
+            android:backgroundTint="@color/button"
             android:layout_marginVertical="20dp"
             android:textSize="18sp"/>
 
         <Button
             android:id="@+id/addFriendBtn"
             android:layout_width="300dp"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:text="Add Friend"
-            android:backgroundTint="#0066ff"
+            android:backgroundTint="@color/button"
             android:layout_marginVertical="20dp"
             android:textSize="18sp"/>
 
         <Button
             android:id="@+id/friendRequestsBtn"
             android:layout_width="300dp"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:text="Friend Requests"
-            android:backgroundTint="#0066ff"
+            android:backgroundTint="@color/button"
             android:layout_marginVertical="20dp"
             android:textSize="18sp"/>
 
         <Button
             android:id="@+id/feedBtn"
             android:layout_width="300dp"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:text="Feed"
-            android:backgroundTint="#0066ff"
+            android:backgroundTint="@color/button"
             android:layout_marginVertical="20dp"
             android:textSize="18sp"/>
     </LinearLayout>
