--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
 
     <color name="theme1">#192E58</color>
     <color name="theme2">#1D65A6</color>
+    <color name="button">#0066ff</color>
 
 </resources>
