--- a/app/src/main/res/layout/blog_row.xml
+++ b/app/src/main/res/layout/blog_row.xml
@@ -18,21 +18,22 @@
 
     <TextView
         android:id="@+id/blogTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:text="Fried Chicken"
-        android:textSize="18dp"
+        android:text="Fried Chicken Chicken Chicken Chicken Chicken"
+        android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/entryImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/rowAuthor"/>
 
     <TextView
         android:id="@+id/rowAuthor"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="author"
         app:layout_constraintLeft_toLeftOf="@id/blogTitle"
         app:layout_constraintTop_toBottomOf="@id/blogTitle" />
