change name of system recommend

--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -43,7 +43,7 @@
         android:id="@+id/systemRecommendBtn"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:text="SYSTEM RECOMMEND"
+        android:text="WHAT TO EAT?"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
