completed see likes feature

--- a/app/src/main/res/layout/activity_see_likes.xml
+++ b/app/src/main/res/layout/activity_see_likes.xml
@@ -6,43 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".SeeLikesActivity">
 
+    <include
+        android:id="@+id/see_likes_blog_entry"
+        layout="@layout/blog_row"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/likedByText"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/colorMyGray"
-        android:gravity="center"
-        android:text="Liked by"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:gravity="left"
+        android:text="Liked by:"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/see_likes_blog_entry" />
+
     <ListView
         android:id="@+id/likeList"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.87"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/likedByText"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        android:layout_height="wrap_content"
 
-        />
+        app:layout_constraintTop_toBottomOf="@+id/likedByText" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_navigation_menu"
         app:labelVisibilityMode="labeled"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/likeList"
-        />
-
+        app:menu="@menu/bottom_navigation_menu" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
