--- a/app/src/main/res/layout/activity_meal_detail.xml
+++ b/app/src/main/res/layout/activity_meal_detail.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
+        android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
