--- a/app/src/main/res/layout/mealrow.xml
+++ b/app/src/main/res/layout/mealrow.xml
@@ -11,6 +11,7 @@
         android:layout_height="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
